# moshomo

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PRD.txt  package.json  pnpm-lock.yaml
.agent/: agent.json
.agent/commands/: explore.md  scaffold-plan.md  verify.md
.agent/progress/: attendance-module-backlog.md  current.md
.agent/rules/: monorepo-architecture.md  pori-integration.md  product-boundaries.md  progress-tracking.md  repo-safety.md  source-of-truth.md  (+1 more)
apps/api/: .env.example  README.md  pyproject.toml
apps/api/src/moshomo_ai/: __init__.py  agent.py  context.py  prompts.py  runs.py
apps/api/src/moshomo_ai/llm/: __init__.py  anthropic.py  base.py  factory.py  google.py  openai.py  schema.py
apps/api/src/moshomo_ai/prompts/: workforce_assistant.md
apps/api/src/moshomo_ai/tools/: __init__.py  leave.py  registry.py  workforce.py
apps/api/src/moshomo_api/: __init__.py  auth.py  catalog.py  config.py  context.py  entitlements.py  main.py  pori_adapter.py  supabase.py
apps/api/src/moshomo_api/modules/: __init__.py
apps/api/src/moshomo_api/modules/shifts/: __init__.py  models.py  router.py
apps/api/src/moshomo_api/routers/: company_apps.py  employee_management.py  employees.py  health.py  leave.py  onboarding.py  workforce.py
apps/api/tests/: test_auth.py  test_company_apps.py  test_employee_management_api.py  test_leave_accrual.py  test_leave_api.py  test_leave_proposal.py  test_onboarding_api.py  test_shifts_api.py  test_supabase_client.py  test_workforce_api.py  test_workforce_assistant.py
supabase/: README.md  config.toml
(+67 files in other folders)
