[project]
name = "moshomo-api"
version = "0.1.0"
description = "FastAPI backend for Moshomo workforce operations and Pori integration"
readme = "README.md"
authors = [
    { name = "aloysathekge", email = "sathekgealoy@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
moshomo-api = "moshomo_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
