[project]
name = "moshomo-api"
version = "0.1.0"
description = "FastAPI backend for Moshomo workforce operations and Pori integration"
readme = "README.md"
authors = [
    { name = "aloysathekge", email = "sathekgealoy@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "email-validator>=2.2.0",
    "fastapi>=0.137.1",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "openai>=2.43.0",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
moshomo-api = "moshomo_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
